--- a/src/components/StoreList/StoreList.scss
+++ b/src/components/StoreList/StoreList.scss
@@ -1,2 +1,32 @@
 .store-list {
+
+
+  // &__store-list__item{
+  //   display: flex;
+  //   flex-direction: row;
+  // }
+}
+
+a {
+  color: #999;
+}
+.current {
+  color: red;
+}
+ul {
+  padding: 0;
+  list-style-type: none;
+
+& li {
+  display: inline;
+  margin: 5px 5px;
+}
+}
+
+a.first::after {
+  content:'...'
+}
+
+a.last::before {
+  content:'...'
 }
