--- a/src/assets/styles/variables/_color.scss
+++ b/src/assets/styles/variables/_color.scss
@@ -11,3 +11,9 @@
   --color-secondary: var(--color-white);
   --color-highlight: var(--color-peter-river);
 }
+
+$bg-theme-dark:rgba(0, 5, 2, 0.925);
+$dark-theme-color: #fff;
+
+$bg-theme-light:#fff;
+$light-theme-color: #000;
