--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -31,6 +31,7 @@
     color: var(--banner__text-color, var(--color-primary));
     font-size: var(--banner__text-font-size, var(--space-xl));
     order: 1;
+    color: blanchedalmond;
   }
 
   &__text-distribution-over {
