add light/dark theme toggler | caclculate recipe | UI modification

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -14,8 +14,8 @@ html, body {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
-  // height: 100vh;
-  height: auto;
+  height: 100vh;
+  // height: auto;
 }
 
 .container {
