--- a/src/components/Store/Store.scss
+++ b/src/components/Store/Store.scss
@@ -25,4 +25,9 @@
     padding: 0;
     color: var(--color-dark-gray);
   }
+
+  &__joke {
+    margin: 0 var( --space-xs) 0 0;
+    padding: 0;
+  }
 }
